--- a/index.html
+++ b/index.html
@@ -14,92 +14,102 @@
 </head>
 
 <body>
-
-    <h1>Top Three Recent SNL Skits</h1>
-
-
-    <p style="text-indent: 20px;">
-        Saturday Night Live (SNL) is an American skit variety and comedy television show
-        that has been on for decades and airs on NBC. It began in 1975 and features celebrity
-        guest hosts, musical performances, and satirical skits parodies of politics,
-        pop culture, and the current events. Listed below are my top three favorite SNL
-        skits that I think you will also love.
-    </p>
-    <h2>Ranking...</h2>
+    <header>
+        <h1>Top Three Recent SNL Skits</h1>
 
 
-
-    <section>
-        <p style="text-align: center;">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HkmlfHi9Ll4?si=B5KhvZqnHdR-bvhp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <br>
-            <cite>Saturday Night Live: Protective Mom, 2023 <a href="https://youtu.be/HkmlfHi9Ll4?si=FPDE8p_86ZzBGw7Q"
-                    target="_blank">
-                    YouTube
-                </a> </cite>
-        </p>
-
-        <h3>#1 Protective Mom</h3>
         <p style="text-indent: 20px;">
-            I love this skit because it humorously exaggerates the overprotectiveness of a mother greeting her child's
-            new boyfriend,
-            making it both authentic and absurd. It is a little cringe and over the top, which is very entertaining. The
-            acting and writing is really great with a humorous twist in the end.
-
+            Saturday Night Live (SNL) is an American skit variety and comedy television show
+            that has been on for decades and airs on NBC. It began in 1975 and features celebrity
+            guest hosts, musical performances, and satirical skits parodies of politics,
+            pop culture, and the current events. Listed below are my top three favorite SNL
+            skits that I think you will also love.
         </p>
-    </section>
+        <h2>Ranking...</h2>
+    </header>
 
-    <section>
-        <p style="text-align: center;">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/qP5bu9hLH9E?si=N_5tcGtdSmjbo8wo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <br>
-            <cite>Saturday Night Live: The Iceberg On the Sinking of the Titanic, 2021 <a
-                    href="https://youtu.be/qP5bu9hLH9E?si=xNR4ff7R6pIlFcPI" target="_blank">YouTube</a></cite>
-        </p>
+    <main>
+        <section>
+            <p style="text-align: center;">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HkmlfHi9Ll4?si=B5KhvZqnHdR-bvhp"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <br>
+                <cite>Saturday Night Live: Protective Mom, 2023 <a
+                        href="https://youtu.be/HkmlfHi9Ll4?si=FPDE8p_86ZzBGw7Q" target="_blank">
+                        YouTube
+                    </a> </cite>
+            </p>
 
-        <h3>#2 The Iceberg On the Sinking of the Titanic</h3>
-        <p style="text-indent: 20px;">
-            Here Bowen Yang in the role of the iceberg as an underdog instead of a villain. The ridiculous premise of
-            the skits coupled with acerbic satire and straight-man acting are what are so laugh-out-loud hilarious.
-            Satirizing a tragedy like this in such a manner creates a fresh and current take on things that never grows
-            stale and keeps people chuckling.
-        </p>
-    </section>
+            <h3>#1 Protective Mom</h3>
+            <p style="text-indent: 20px;">
+                I love this skit because it humorously exaggerates the overprotectiveness of a mother greeting her
+                child's
+                new boyfriend,
+                making it both authentic and absurd. It is a little cringe and over the top, which is very entertaining.
+                The
+                acting and writing is really great with a humorous twist in the end.
 
-    <section>
-        <p style="text-align: center;">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/3sxRAeh8f7w?si=2bAgMGRqIsT7xDMg"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <br>
-            <cite>Saturday Night Live: Rap Roundtable, 2020 <a href="https://youtu.be/3sxRAeh8f7w?si=6oo5IkyrBNVaa4Bo"
-                    target="_blank">YouTube</a></cite>
-        </p>
+            </p>
+        </section>
 
-        <h3>#3 Rap Roundtables</h3>
-        <p style="text-indent: 20px;">
-            This skit laughably juxtaposes old-school and new-school rap perspectives, satirizing generation arguments
-            surrounding hip-hop. The sketch's fusion of serious music critique and absurd characters makes it hilarious
-            as well as charming. With amazing performances by Pete Davidson and Timothee Chalamet and excellent writing,
-            the humor is enhanced, making the skit real funny and awesome.
-        </p>
-    </section>
+        <section>
+            <p style="text-align: center;">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qP5bu9hLH9E?si=N_5tcGtdSmjbo8wo"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <br>
+                <cite>Saturday Night Live: The Iceberg On the Sinking of the Titanic, 2021 <a
+                        href="https://youtu.be/qP5bu9hLH9E?si=xNR4ff7R6pIlFcPI" target="_blank">YouTube</a></cite>
+            </p>
 
+            <h3>#2 The Iceberg On the Sinking of the Titanic</h3>
+            <p style="text-indent: 20px;">
+                Here Bowen Yang in the role of the iceberg as an underdog instead of a villain. The ridiculous premise
+                of
+                the skits coupled with acerbic satire and straight-man acting are what are so laugh-out-loud hilarious.
+                Satirizing a tragedy like this in such a manner creates a fresh and current take on things that never
+                grows
+                stale and keeps people chuckling.
+            </p>
+        </section>
+
+        <section>
+            <p style="text-align: center;">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3sxRAeh8f7w?si=2bAgMGRqIsT7xDMg"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <br>
+                <cite>Saturday Night Live: Rap Roundtable, 2020 <a
+                        href="https://youtu.be/3sxRAeh8f7w?si=6oo5IkyrBNVaa4Bo" target="_blank">YouTube</a></cite>
+            </p>
+
+            <h3>#3 Rap Roundtables</h3>
+            <p style="text-indent: 20px;">
+                This skit laughably juxtaposes old-school and new-school rap perspectives, satirizing generation
+                arguments
+                surrounding hip-hop. The sketch's fusion of serious music critique and absurd characters makes it
+                hilarious
+                as well as charming. With amazing performances by Pete Davidson and Timothee Chalamet and excellent
+                writing,
+                the humor is enhanced, making the skit real funny and awesome.
+            </p>
+        </section>
+    </main>
 
     <footer>
         <p> &copy; 2025 by Leon Vadchochai for BATECH 189
             <br>
-            <cite>Oswald font by <a href="https://fonts.google.com/specimen/Oswald" target="_blank">Google
+            <cite>Oswald font by Vernon Adams, Kalapi Gajjar, Cyreal <a href="https://fonts.google.com/specimen/Oswald"
+                    target="_blank">Google
                     Fonts</a></cite>
             <br>
-            <cite>Public Sans font by <a href="https://fonts.google.com/specimen/Public+Sans" target="_blank">Google
+            <cite>Public Sans font by USWDS, Dan Williams, Pablo Impallari, Rodrigo Fuenzalida
+
+                <a href="https://fonts.google.com/specimen/Public+Sans" target="_blank">Google
                     Fonts</a></cite>
 
         </p>
